# dnscryptutils

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dnsstamps-to-rules.py  dump_sdns_info.py  pyproject.toml  requirements.txt  rules.py  setup.py  test_e2e.py  test_rule.py  test_utils.py  tox.ini  utils.py
.github/workflows/: create-and-publish-docker-image.yml  main.yml
src/dnscryptutils/: rules.py  utils.py
test_data/: dnscrypt-proxy.toml
tests/: test_e2e.py  test_rule.py  test_utils.py
tests/test_data/: dnscrypt-proxy.toml  relays.md
